src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Alternate_Email_Address__c</fullName>
        <label>Alternate Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Notes_Timestamp__c</fullName>
        <inlineHelpText>Automatically captures when the contact notes were last updated</inlineHelpText>
        <label>Contact Notes Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <label>Contact Role</label>
        <picklist>
            <picklistValues>
                <fullName>Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business/Functional Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L&amp;D/Talent Stakeholder</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <label>Contact Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disqualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unqualified - Automatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referred to Web Sales - Auto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unqualified - Reviewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Nurture</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department_B2B__c</fullName>
        <label>Department (B2B)</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Functional_Segment__c</fullName>
        <label>Functional Segment</label>
        <picklist>
            <picklistValues>
                <fullName>L&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering &amp; IT</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Import2_Id__c</fullName>
        <description>Id of the record in original system, where it was imported from by Import2.com</description>
        <externalId>true</externalId>
        <label>Import2 Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the contact</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Contact_SF_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Contact SF ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_Create_Date__c</fullName>
        <label>Legacy Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Log_of_Prior_Notes__c</fullName>
        <description>Automatically logs any previous notes or comments within the contact</description>
        <inlineHelpText>Automatic documentation of any previous &apos;Notes&apos; you had in this contact. Will be updated whenever you update new notes above.</inlineHelpText>
        <label>Log of Prior Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MQL_Date__c</fullName>
        <label>MQL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MQL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MQL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Misc notes to record for contact</description>
        <inlineHelpText>Misc notes to record for contact</inlineHelpText>
        <label>Notes</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_of_Coursera_Exec__c</fullName>
        <label>Reference of Coursera Exec</label>
        <picklist>
            <picklistValues>
                <fullName>Rick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andrew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nikhil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Julia</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referred_by_Coursera_Exec__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Referred by Coursera Exec</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Self_reported_employees_to_buy_for__c</fullName>
        <label>Self-reported # employees to buy for</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Self_reported_needs_from_contact__c</fullName>
        <label>Self-reported needs from contact:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Web_Sales_Amount__c</fullName>
        <label>Web Sales Amount</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Sales_Transaction_ID__c</fullName>
        <label>Web Sales Transaction ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Sales_Transaction_Type__c</fullName>
        <label>Web Sales Transaction Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cbit__ClearbitReady__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ClearbitReady</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cbit__Clearbit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clearbit</label>
        <referenceTo>cbit__Clearbit__c</referenceTo>
        <relationshipLabel>Contacts Clearbit</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cbit__Facebook__c</fullName>
        <formula>IF(  LEN(cbit__Clearbit__r.cbit__FacebookHandle__c ) ==0,&apos;&apos;, HYPERLINK(&quot;http://facebook.com/&quot; &amp; cbit__Clearbit__r.cbit__FacebookHandle__c, &quot;facebook.com/&quot; &amp; cbit__Clearbit__r.cbit__FacebookHandle__c )  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facebook</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cbit__LinkedIn__c</fullName>
        <formula>IF(  LEN(cbit__Clearbit__r.cbit__LinkedinHandle__c ) ==0,&apos;&apos;, HYPERLINK(&quot;http://linkedin.com/&quot; &amp; cbit__Clearbit__r.cbit__LinkedinHandle__c, &quot;linkedin.com/&quot; &amp; cbit__Clearbit__r.cbit__LinkedinHandle__c )  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LinkedIn</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cbit__Twitter__c</fullName>
        <formula>IF( LEN(cbit__Clearbit__r.cbit__TwitterHandle__c ) ==0,&apos;&apos;, HYPERLINK(&quot;http://twitter.com/&quot; &amp; cbit__Clearbit__r.cbit__TwitterHandle__c, &quot;twitter.com/&quot; &amp; cbit__Clearbit__r.cbit__TwitterHandle__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Twitter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Date__c</fullName>
        <description>Acquisition Date for lead from marketo during conversion</description>
        <inlineHelpText>Marketo Lead Acquisition Date from Conversion</inlineHelpText>
        <label>Acquisition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Program_Id__c</fullName>
        <description>Marketo: Acquisition Program Id</description>
        <label>Acquisition Program Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Program__c</fullName>
        <description>Lead Acquisition Program from Marketo populated during conversion</description>
        <inlineHelpText>Marketo Lead Acquisition Program from Conversion</inlineHelpText>
        <label>Acquisition Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_City__c</fullName>
        <description>Marketo: Inferred City</description>
        <label>Inferred City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Company__c</fullName>
        <description>Marketo: Inferred Company</description>
        <label>Inferred Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Country__c</fullName>
        <description>Marketo: Inferred Country</description>
        <label>Inferred Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Metropolitan_Area__c</fullName>
        <description>Marketo: Inferred Metropolitan Area</description>
        <label>Inferred Metropolitan Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Phone_Area_Code__c</fullName>
        <description>Marketo: Inferred Phone Area Code</description>
        <label>Inferred Phone Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Postal_Code__c</fullName>
        <description>Marketo: Inferred Postal Code</description>
        <label>Inferred Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_State_Region__c</fullName>
        <description>Marketo: Inferred State Region</description>
        <label>Inferred State Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Lead_Score__c</fullName>
        <description>Marketo Lead Score for Lead During Conversion</description>
        <inlineHelpText>Marketo Lead Score from Conversion</inlineHelpText>
        <label>Score</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Referrer__c</fullName>
        <description>Marketo: Original Referrer</description>
        <label>Original Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Search_Engine__c</fullName>
        <description>Marketo: Original Search Engine</description>
        <label>Original Search Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Search_Phrase__c</fullName>
        <description>Marketo: Original Search Phrase</description>
        <label>Original Search Phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Source_Info__c</fullName>
        <description>Marketo: Original Source Info</description>
        <label>Original Source Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Source_Type__c</fullName>
        <description>Marketo: Original Source Type</description>
        <label>Original Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Add_to_Marketo_Campaign__c</fullName>
        <formula>HYPERLINK (&quot;/apex/mkto_si__Add_to_Marketo_Campaign_Mobile?contactType=Contact&amp;contactIds=&quot; &amp; Id, IMAGE(&quot;https://app.marketo.com/images/icons16/marketo16.png&quot;,&quot;Add to Marketo Campaign&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add to Marketo Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__HideDate__c</fullName>
        <label>Hide Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Date__c</fullName>
        <label>Last Interesting Moment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Desc__c</fullName>
        <label>Last Interesting Moment Desc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Source__c</fullName>
        <label>Last Interesting Moment Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Type__c</fullName>
        <label>Last Interesting Moment Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment__c</fullName>
        <formula>IF(!ISNULL(mkto_si__Last_Interesting_Moment_Date__c), 
HYPERLINK(&quot;/apex/mkto_si__Contact_Full_List?view=IM&amp;id=&quot; &amp; Id, mkto_si__Last_Interesting_Moment_Type__c &amp; &quot; -- &quot; &amp; mkto_si__Last_Interesting_Moment_Desc__c ), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Interesting Moment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Mkto_Lead_Score__c</fullName>
        <label>Mkto Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Priority__c</fullName>
        <label>Engagement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Relative_Score_Value__c</fullName>
        <label>Relative Score Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Relative_Score__c</fullName>
        <formula>CASE( MIN(MAX(mkto_si__Relative_Score_Value__c, 0), 3),
    0, IMAGE(&quot;https://app.marketo.com/images/icons/star0.png&quot;,&quot;0&quot;),
    1, IMAGE(&quot;https://app.marketo.com/images/icons/star1.png&quot;,&quot;1&quot;),
    2, IMAGE(&quot;https://app.marketo.com/images/icons/star2.png&quot;,&quot;2&quot;),
    3, IMAGE(&quot;https://app.marketo.com/images/icons/star3.png&quot;,&quot;3&quot;),
    &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relative Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Sales_Insight__c</fullName>
        <formula>HYPERLINK (&quot;/apex/Contact_Full_List?id=&quot; &amp; Id, IMAGE(&quot;https://www.marketo.com/salesforce/images/applicationLink.png&quot;,&quot;Sales Insight&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Insight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Urgency_Value__c</fullName>
        <label>Urgency Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Urgency__c</fullName>
        <formula>CASE( MIN(MAX(mkto_si__Urgency_Value__c, 0),3),
    0, IMAGE(&quot;https://app.marketo.com/images/icons/fire0.png&quot;,&quot;0&quot;),
    1, IMAGE(&quot;https://app.marketo.com/images/icons/fire1.png&quot;,&quot;1&quot;),
    2, IMAGE(&quot;https://app.marketo.com/images/icons/fire2.png&quot;,&quot;2&quot;),
    3, IMAGE(&quot;https://app.marketo.com/images/icons/fire3.png&quot;,&quot;3&quot;),
    &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Urgency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__View_in_Marketo__c</fullName>
        <formula>HYPERLINK (&quot;/apex/mkto_si__Marketo_Lead_Detail?objType=Contact&amp;objId=&quot; &amp; Id, IMAGE(&quot;https://app.marketo.com/images/icons16/marketo16.png&quot;,&quot;View in Marketo&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View in Marketo</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <recordTypes>
        <fullName>B2B</fullName>
        <active>true</active>
        <description>B2B Contact Type</description>
        <label>B2B</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partnerships</fullName>
        <active>true</active>
        <description>Partnerships Contact type</description>
        <label>Partnerships</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LID__Check_CompanyId_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
</CustomObject>